# pm-prism

./: .gitignore  .prism_label_cache.json  README.md  main.py  pyproject.toml
prism/: __init__.py
prism/adapters/: __init__.py  bpmn_adapter.py  dfg_adapter.py
prism/core/: __init__.py  base.py  config.py  decomposer.py  decomposition.py  labeler.py  strategies.py
prism/core/decompositions/: __init__.py  cut_vertex.py  decomposer.py  embedding_strategy.py  factory.py  gateway_based.py  hierarchical.py  louvain.py  scd.py
prism/sanity/: llm_labeling_sanity.py
prism/utils/: __init__.py  url_utils.py
prism/visualization/: __init__.py  graph_viz.py  interactive.py
