[project]
name = "pm-prism"
version = "0.1.0"
description = "Process Mining - Process Representation with Intelligent Subprocess Modeling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.0",
    "pandas>=2.0",
    "pm4py>=2.7",
    "plotly>=5.0",
    "dash>=2.0",
    "pandas-stubs>=2.3.3.251201",
    "sentence-transformers>=2.2",
    "numpy>=1.24",
    "groq>=0.4",
    "python-dotenv>=1.0",
]
